--- a/style.css
+++ b/style.css
@@ -362,3 +362,10 @@ html, body {
   font-size: 0.85rem;
   opacity: 0.7;
 }
+
+.intro-scene img {
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+}
+
